--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -4,8 +4,11 @@
 
 .contactForm {
     background-color: #8B4F39;
-    display: flex;
-    justify-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-color: black;
     border-style: solid;
+    width: 25%
+    
 }
